--- a/custom_components/modbus_tcpip/translations/nb.json
+++ b/custom_components/modbus_tcpip/translations/nb.json
@@ -1,8 +1,14 @@
 {    
 	"title": "Modbus TCP/IP",
     "config": {         
-        "step": {                    
+        "step": {  
             "user": { 
+				"title": "Legg til Modbus enhet",
+                "data": {
+                    "mode_selection": "Velg tilkoblingsmetode"
+                }   
+            }, 
+            "add_tcpip": { 
 				"title": "Modbus TCP/IP Innstillinger",
                 "description": "Legg inn detaljer",
                 "data": {                     
@@ -13,23 +19,38 @@
 					"slave_id": "Slave ID",
                     "scan_interval": "Pollinterval i sekunder",
                     "scan_interval_fast": "Hurtig pollinterval i sekunder"  	
+                }     
+            }, 
+            "add_rtu": { 
+				"title": "Modbus RTU Innstillinger",
+                "description": "Legg inn detaljer",
+                "data": {                     
+                    "name": "Navn", 
+                    "device_model": "Modell",                   
+                    "serial_port": "Seriellport",
+					"serial_baud": "Baudrate",
+					"slave_id": "Slave ID",
+                    "scan_interval": "Pollinterval i sekunder",
+                    "scan_interval_fast": "Hurtig pollinterval i sekunder"  	
                 }        
             }
         },
-		"abort": {
-			"already_configured": "Integrasjonen finnes allerede"
-		}		
+        "error": {
+            "mode_not_implemented": "Valgt tilkoblingsmetode er ikke implementert."
+        }			
     },   
     "options": {         
         "step": {
             "init": {
-				"title": "Modbus TCP/IP Innstillinger",
+				"title": "Modbus Innstillinger",
                 "description": "Legg inn detaljer",
                 "data": {                     
                     "name": "Navn",  
                     "device_model": "Modell",                      
                     "ip_address": "IP-adresse",
 					"port": "Port",
+                    "serial_port": "Seriellport",
+					"serial_baud": "Baudrate",
 					"slave_id": "Slave ID",    
                     "scan_interval": "Pollinterval i sekunder",
                     "scan_interval_fast": "Hurtig pollinterval i sekunder" 
@@ -40,6 +61,14 @@
             "add_success": "Enhet {dev_name} ble lagt til",
 			"already_configured": "Enhet {dev_name} er allerede konfigurert"
 		}
+    },
+    "selector": {
+        "mode_selection": {
+            "options": {
+				"add_tcpip": "TCP/IP",
+                "add_rtu": "RTU"
+            }
+        }
     },
     "services": {
         "request_update": {
